fix alignment of items on mobile + .truncate class css

--- a/style.css
+++ b/style.css
@@ -160,6 +160,12 @@ select  {
   border-bottom:1px solid #757575;
 }
 
+.truncate {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
 
 
 /* **************************************
@@ -250,8 +256,7 @@ ul#menu-main {
 }
 
 .collection {
-	margin:0px !important;
-	border: 0 !important;
+	padding-left: 0;
 }
 
 .collection-item {
